--- a/Day8/stylesheet.css
+++ b/Day8/stylesheet.css
@@ -15,6 +15,8 @@ input[type="button"]:active {
 .taskList {
   background-color: beige;
   border: 3px solid red;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 ul {
