--- a/Day9/stylesheet.css
+++ b/Day9/stylesheet.css
@@ -17,7 +17,7 @@ body {
   justify-self: center;
   grid-column: 1;
   display: grid;
-  grid-template-columns: repeat(10, 90px);
+  grid-template-columns: repeat(10, 76px) + 1;
   text-align: center;
   font-size: 2rem;
   justify-content: stretch;
